--- a/docroot/sites/all/themes/escrow/Gemfile
+++ b/docroot/sites/all/themes/escrow/Gemfile
@@ -9,5 +9,6 @@ gem 'breakpoint', '~>2.0.2'
 gem 'sassy-buttons', '~>0.1.4'
 gem 'compass-normalize', '~>1.4.3'
 gem 'css_parser', '~>1.3.4'
+gem 'animation', '~>0.1.alpha.3'
 
 # Now that you're using Bundler, you need to run `bundle exec compass watch` instead of simply `compass watch`.
