--- a/docroot/sites/all/themes/escrow/Gemfile
+++ b/docroot/sites/all/themes/escrow/Gemfile
@@ -2,9 +2,11 @@
 source 'https://rubygems.org'
 
 # ~> Refers to all versions of the given gem on the current full version number, so it will be able to use any version of Compass Aurora until Compass Aurora 4.x.x. For a specific version of a gem, remove the ~>
+gem 'compass', '~>0.13.alpha.0'
+gem 'rb-fsevent', '~> 0.9.1'
 gem 'compass-aurora', '~>3.0.0'
-gem 'toolkit', '~>1.0.0'
-gem 'singularitygs', '~>1.0.7'
+gem 'toolkit', '~>1.3.3'
+gem 'singularitygs', '~>1.1.0'
 gem 'breakpoint', '~>2.0.2'
 gem 'sassy-buttons', '~>0.1.4'
 gem 'compass-normalize', '~>1.4.3'
